@@ -19,5 +19,6 @@ RunInfo:
 NumEvents: 1000000
 PtCuts: [0]
 Description:
-  Cross sections as a function of boson rapidity in $\p \bar{p}$ collisions at
-  $\sqrt{s}$ = 1.96 TeV, based on an integrated luminosity of $0.4~\text{fb}^{-1}$.
+  Cross sections as a function of boson rapidity in $p \bar{p}$ 
+  collisions at $\sqrt{s}$ = 1.96 TeV, based on an integrated luminosity 
+  of $0.4~\text{fb}^{-1}$.
