@@ -1,5 +1,5 @@
 Name: MC_ZJETS
-Summary: Monte Carlo validation observables for Z[e+ e-] + jets production
+Summary: Monte Carlo validation observables for $Z[e^+ \, e^-]$ + jets production
 Status: VALIDATED
 Authors:
  - Frank Siegert <frank.siegert@durham.ac.uk>
@@ -11,5 +11,6 @@ NumEvents: 1000000
 PtCuts: [0]
 Description:
   Available observables are Z mass, pT of jets 1-4, jet multiplicity,
-  Delta eta (Z, jet1), Delta R (jet2, jet3), Differential jet
-  rates 0->1, 1->2, 2->3, 3->4, Integrated 0--4 jet rates
+  $\Delta\eta(Z, \text{jet1})$, $\Delta R(\text{jet2}, \text{jet3})$, 
+  differential jet rates 0->1, 1->2, 2->3, 3->4, integrated 0--4 jet 
+  rates.
