@@ -2,6 +2,7 @@ dist_pkgdata_DATA = \
   ALEPH_1991_S2435284.info \
   ALEPH_1996_S3486095.info \
   ALEPH_1996_S3196992.info \
+  BELLE_2006_S6265367.info \
   CDF_1988_S1865951.info \
   CDF_1990_S2089246.info \
   CDF_1991_S2313472.info \
