@@ -1,6 +1,6 @@
 Name: PDG_HADRON_MULTIPLICITIES_RATIOS
 Year: 2008
-Summary: Ratios (w.r.t. $pi^+/pi^-$) of hadron multiplicities in hadronic $e^+e^-$ events
+Summary: Ratios (w.r.t. $\pi^+/\pi^-$) of hadron multiplicities in hadronic $e^+e^-$ events
 Experiment: PDG
 Collider: Various
 SpiresID: 7857373
@@ -10,14 +10,14 @@ Authors:
 References:
  - Phys. Lett. B, 667, 1 (2008)
 RunInfo:
-  Hadronic events in $e+e-$ collisions
+  Hadronic events in $e^+ e^-$ collisions
 NumEvents: 1000000
 PtCuts: [0]
 Description:
-  Ratios (w.r.t. $\pi^+/\pi^-$) of hadron multiplicities in hadronic $e^+e^-$
+  Ratios (w.r.t. $\pi^+/\pi^-$) of hadron multiplicities in hadronic $e^+ e^-$
   events, taken from Review of Particle Properties 2008, table 40.1,
-  page 355.   Average hadron multiplicities per hadronic $e^+e^-$
+  page 355.  Average hadron multiplicities per hadronic $e^+ e^-$
   annihilation event at $\sqrt{s} \approx$ 10, 29--35, 91, and
-  130--200 GeV,normalised to the pion multiplicity. The numbers are averages
+  130--200 GeV, normalised to the pion multiplicity. The numbers are averages
   from various experiments. Correlations of the systematic uncertainties
   were considered for the calculation of the averages.
